Fixed footer alignment

--- a/customer-frontend/src/components/general/footer/Footer.css
+++ b/customer-frontend/src/components/general/footer/Footer.css
@@ -1,5 +1,4 @@
 .center-text {
-    text-align: left;
     font-size: large;
 }
 
@@ -7,12 +6,17 @@
     font-size: 15px;
 }
 
-.company-logo {}
+.company-logo {
+    padding-top: 10px;
+    
+}
 
-.three-icons {}
+.three-icons {
+
+}
 
 .footer-bg {
     background-color: #f9d230;
-    padding-top: 70px;
-    padding-bottom: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
